samples/_failures_safe/1761600785_274408_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b1e19485.c: In function ‘main’:
./samples/SAFE/__tmp_b1e19485.c:147:5: error: expected declaration or statement at end of input
  147 |     printf("\n");
      |     ^~~~~~
